# ProjektNKMCPP

./: .anjuta_sym_db.db  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  OPISPROJEKTU.txt  ProjektInformatykaR2S03.txt  README  README.md  README.txt  config.h  config.status  configure  configure.ac  libtool  main.cpp  tetris.h~
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  gridNaWidgety.cc~  gridNaWidgety.h~  main.cc  main.cc~  oProgramieDialog.h~  oProgramieTetrisDialog.cc  oProgramieTetrisDialog.cc~  oProgramieTetrisDialog.h  oProgramieTetrisDialog.h~  planszaGryTetrisDrawingArea.cc  planszaGryTetrisDrawingArea.cc~  planszaGryTetrisDrawingArea.h  planszaGryTetrisDrawingArea.h~  tetris  tetris.cc~  tetris.h~  tetris.ui  tetrisWindow.cc  tetrisWindow.cc~  tetrisWindow.h  tetrisWindow.h~
src/.deps/: main.Po  oProgramieTetrisDialog.Po  planszaGryTetrisDrawingArea.Po  tetrisWindow.Po
